package exp3;
//@Author：ranxing
//@Time：2022/10/615:21
//@File：AbstractFactory

public interface AbstractFactory {
    public  AbstractHamburg createHamburg();
    public  AbstactCola createCola();
}
