package exp3;
//@Author：ranxing
//@Time：2022/10/615:23
//@File：AbstractHamburg

public interface AbstractHamburg {
    public  void eat();
}
